--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -450,6 +450,16 @@ margin-top: 50px;
     .text button {
         width: 50%;
     }
+    .underline {
+        background-color: #000;
+        width: auto;
+    }
+    .port{
+        z-index: -1;
+    }
+    .base{
+        z-index: -1;
+    }
 }
 
 
